Osa 3. Toinen tehtävä

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 
 <body>
-  <!--Tee tehtävät tänne-->
+  <h1>Aapon nettisivut</h1>
+  <h2>Sunnuntain ohjelma:</h2>
+  <p>Tänään teen Tietokone työvälineenä kurssin viimeisen osion ja mikä
+    tärkeintä: kurssin <strong>tentin</strong>.
+  </p>
 </body>
 
 </html>
