Osa 3. Kolmas tehtävä

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 
 <body>
-  <h1>Aapon nettisivut</h1>
-  <h2>Sunnuntain ohjelma:</h2>
-  <p>Tänään teen Tietokone työvälineenä kurssin viimeisen osion ja mikä
-    tärkeintä: kurssin <strong>tentin</strong>.
-  </p>
+  <h1>Seitsemän veljestä</h1>
+  <h2>Ensimmäinen luku</h2>
+  <p><strong>Jukolan</strong> talo, eteläisessä <i>Hämeessä</i>, seisoo erään mäen pohjoisella rinteellä, liki <strong><i>Toukolan kylää.</i></strong></p>
+  <p>Sen läheisin ympäristö on kivinen tanner, mutta alempana alkaa pellot, joissa, ennenkuin talo oli häviöön mennyt, aaltoili teräinen vilja.</p>
+  <p><i>jatkuu...</i></p>
 </body>
 
 </html>
