--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
 <body>
   <h1>Seitsemän veljestä</h1>
+  <img src="assets/Seitsemän_veljestä.png" alt="Kansikuva" height="498" width="333"/>
+  <p>Kuva kirjan sivusta</p>
   <h2>Tärkeät päähenkilöt</h2>
   <ul>
     <li>Päähenkilöt</li>
