--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+  <a href="Aleksis-Kivi/index.html">Aleksis Kivi</a>
   <h1>Seitsemän veljestä</h1>
   <img src="assets/Seitsemän_veljestä.png" alt="Kansikuva" height="498" width="333"/>
   <p>Kuva kirjan sivusta</p>
