Osa 3. Kahdeksas tehtävä

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <img src="assets/Seitsemän_veljestä.png" alt="Kansikuva" height="498" width="333"/>
   <p>Kuva kirjan sivusta</p>
   <h2>Tärkeät päähenkilöt</h2>
-  <ul>
+  <ul class="lista1">
     <li>Päähenkilöt</li>
     <ul>
       <li>Juhani</li>
